--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="mb-1 navbar navbar-expand-lg navbar-dark ">
+<nav class="mb-1 navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{{url_for('main.index')}}"><strong>One-Min-Pitch</strong> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
