--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -62,15 +62,15 @@
     
 }
 .commentform{
-    color: white;
+    color: rgb(104, 98, 98);
     margin-top: 1%;
 }
 #user{
     margin-top: 4%;
-    color: white;
+    color: rgb(128, 123, 123);
 }
 .pitches{
-    background-color: azure;
+    background-color: rgb(61, 207, 207);
     color: black;
     padding: 2%;
     border-radius: 8px;
@@ -78,7 +78,7 @@
 }
 .updateprofile{
     margin-top: 5%;
-    color: white;
+    color: rgb(48, 236, 236);
 }
 #particles-js {
     
